# Pori

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Evaluation_system_implementation.md  HARVEST.md  LICENSE  MANIFEST.in  MONOREPO.md  README.md  ROADMAP.md  SECURITY.md  START-HERE.md  Sandbox_implementation.md  WARP.md  agent.py  config.example.yaml  config.yaml  deepagent_copy.md  design-qa-conversation-canvas.md  design-qa.md  docker-compose.yml  evaluation.py  letta_memory.md  letta_memory_implementation.md  main.py  main_dev.py  muti_agent_implementation.md  package.json  project_state.md  (+7 more)
products/aloy/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Pori_cloud_implementation.md  README.md  about_aloy.md  ai_engineer_projects_analysis.md  ai_projects_value_analysis.md  alembic.example.ini  aloy.models.example.yaml  aloy_backend_api.md  config.example.yaml  config.yaml  docker-compose.yml  pori_cloud_api.md  pyproject.toml  quinton.md
products/aloy/backend/aloy_backend/: __init__.py  api.py  approvals.py  auth.py  background.py  baseline_delivery.py  baseline_surface.py  builder_eval.py  config.py  context_ingestion.py  conversation_runtime.py  cron.py  database.py  deps.py  doc_extract.py  event_bootstrap.py  event_context.py  event_lifecycle.py  event_log.py  event_memory.py  event_presenters.py  event_template_authoring.py  event_templates.py  events.py  file_presentations.py  file_uploads.py  library.py  live_runs.py  logging_config.py  main.py  memory_records.py  memory_store.py  middleware.py  model_roles.py  models.py  orchestrator.py  pagination.py  proposal_executor.py  proposal_reconciliation.py  provisioning.py  (+49 more)
products/aloy/backend/aloy_backend/alembic/: env.py
products/aloy/backend/aloy_backend/alembic/versions/: a1b2c3d4e5f6_add_memory_snapshots.py  a3d4e5f6b7c8_surface_publications.py  a577558e49f6_initial_run_table.py  a7b8c9d0e1f2_add_enterprise_tenancy_and_worker_leases.py  b2c3d4e5f6a7_add_team_configs.py  b4e5f6a7c8d9_event_setup_context.py  b8c9d0e1f2a3_add_session_lineage_and_context_artifacts.py  c5f6a7b8d9e0_event_context_ingestion.py  c9d0e1f2a3b4_add_skills_and_child_runs.py  d0e1f2a3b4c5_add_governed_evolution.py  d6a7b8c9e0f1_event_context_snapshots.py  e1f2a3b4c5d6_add_skill_ecosystem_metadata.py  e5f6a7b8c9d0_unify_memory_records.py  e7b8c9d0f1a2_event_bootstrap_runs.py  f4a1b2c3d4e5_add_user_profiles.py  f8c9d0e1a2b3_run_model_assignments.py  g3b4c5d6e7f8_add_run_skill_artifacts.py  g9d0e1f2b3c4_surface_command_attempts.py  h0e1f2a3b4c5_event_owned_schedules.py  i1f2a3b4c5d6_task_execution_profiles.py  i5d6e7f8a9b0_add_layered_knowledge_scope.py  j2a3b4c5d6e7_surface_interaction_context_receipts.py  j6e7f8a9b0c1_add_run_progress_checkpoint.py  k3b4c5d6e7f8_run_execution_budgets.py  k7a8b9c0d1e2_add_cron_jobs.py  l4c5d6e7f8a9_context_summary_boundaries.py  m5d6e7f8a9b0_proposal_reconciliation.py  n0d1e2f3a4b5_add_oauth_connections.py  n6e7f8a9b0c1_surface_inspection_evidence.py  o1e2f3a4b5c6_oauth_connection_scope.py  o7f8a9b0c1d2_surface_evolution_proposals.py  p2f3a4b5c6d7_add_mcp_servers.py  q3a4b5c6d7e8_runs_claim_index.py  (+14 more)
products/aloy/backend/aloy_backend/connections/: __init__.py  crypto.py  mcp_store.py  providers.py  store.py
products/aloy/backend/aloy_backend/gateway/: base.py  delivery.py  registry.py  service.py  telegram.py
products/aloy/backend/aloy_backend/memory/: project_hosting.md
products/aloy/backend/aloy_backend/routes/: __init__.py  agent_configs.py  connections.py  conversations.py  cron.py  event_memory.py  event_setup.py  event_templates.py  events.py  evolution.py  files.py  gateway.py  mcp_servers.py  memory.py  organizations.py  runs.py  skills.py  surfaces.py  system.py  teams.py  today.py  traces.py  usage.py  users.py
products/aloy/backend/aloy_backend/tools/: __init__.py  calendar.py  event_history.py  gmail.py  google_common.py  library.py  research.py  surface_builds.py  surface_completion.py  surface_requests.py  surface_state.py  surfaces.py  tasks.py
products/aloy/backend/deploy/: OAUTH-VERIFICATION.md  RUNBOOK.md  aloy-backend.service  load-env-from-ssm.sh  nginx.conf  pori-cloud.service
products/aloy/backend/docs-history/: aloy_backend_implementation-2026-06-HISTORICAL.md
products/aloy/backend/pori_cloud/: __init__.py  api.py  auth.py  background.py  config.py  conversation_runtime.py  cron.py  database.py  event_log.py  logging_config.py  main.py  memory_store.py  middleware.py  models.py  schemas.py  session_repository.py  skills.py  streaming.py  tenancy.py  worker.py
products/aloy/backend/pori_cloud/alembic/: env.py
products/aloy/backend/pori_cloud/gateway/: __init__.py  delivery.py  registry.py  service.py  telegram.py
products/aloy/backend/pori_cloud/memory/: project_hosting.md
products/aloy/backend/pori_cloud/routes/: __init__.py  agent_configs.py  conversations.py  cron.py  evolution.py  gateway.py  memory.py  runs.py  teams.py  traces.py  usage.py
products/aloy/backend/tests/: conftest.py  test_api_basics.py  test_approvals.py  test_baseline_delivery.py  test_baseline_surface.py  test_builder_eval.py  test_connections.py  test_context_ingestion.py  test_cron.py  test_documents.py  test_enterprise_scope.py  test_event_bootstrap.py  test_event_context.py  test_event_context_pack.py  test_event_memory.py  test_event_setup.py  test_event_surfaces.py  test_event_template_authoring.py  test_event_templates.py  test_events.py  test_file_library.py  test_file_presentations.py  test_gateway.py  test_images.py  test_mcp_servers.py  test_model_roles.py  test_orchestrator_config.py  test_organizations.py  test_proposal_executor.py  test_r4_live_surface.py  test_rate_limit_boundaries.py  test_release_b_surface.py  test_release_c_continuity.py  test_release_d_child_runs.py  test_release_d_skills.py  test_release_e_evolution.py  test_resumable_runs.py  test_run_budgets.py  test_run_events.py  test_run_outcome.py  (+37 more)
(+547 files in other folders)
