[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pori"
version = "1.4.0"
description = "A simple, extensible AI agent framework with tool integration and memory"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Aloy Sathekge", email = "sathekgealoy@gmail.com"}
]
keywords = ["ai", "agent", "llm", "tools", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.10"
dependencies = [
    # Core LLM providers
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
    # Runtime essentials
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
pori = "pori.cli:run"

[tool.setuptools.packages.find]
where = ["."] 
include = ["pori*"]
exclude = ["dev_docs*", "tests*", "examples*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pori = ["prompts/**/*.md"]

[project.entry-points."pori.tools"]
"standard" = "pori.tools.standard:register_all_tools"

[project.entry-points."pori.memory_stores"]
"memory" = "pori.memory:create_in_memory_store"
"sqlite" = "pori.memory:create_sqlite_memory_store"

[project.optional-dependencies]
# Vector embeddings for semantic memory recall. Without this extra, Pori
# falls back to a deterministic hash-based embedding (lower quality but
# zero-dependency).
embeddings = [
    "sentence-transformers>=3.2.1",
]
# Web search tool (Tavily). The `web_search` tool returns a friendly
# "install tavily-python" error if this extra is not installed.
web = [
    "tavily-python>=0.5.0",
]
# Everything above in one shot.
all = [
    "sentence-transformers>=3.2.1",
    "tavily-python>=0.5.0",
]
test = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.75.0",
    "aiohttp>=3.8.4",
    "black==24.8.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "memory: tests for memory subsystem",
    "tools: tests for tools subsystem",
    "agent: tests for agent functionality",
    "orchestrator: tests for orchestrator functionality",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["pori"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
