[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pori"
version = "1.4.0"
description = "The durable, self-improving AI agent runtime — long-running tasks that resume after a crash, and skills the agent grows from its own work."
readme = "README.md"
license = "MIT"
authors = [
    {name = "Aloy Sathekge", email = "sathekgealoy@gmail.com"}
]
keywords = ["ai", "agent", "llm", "tools", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.10"
dependencies = [
    # Bounded ranges (>=floor,<next_major): a floor for the features we use plus
    # an upper bound so a malicious or breaking new major can't slip in via a
    # `pip install pori` before uv.lock pins it (Shai-Hulud-style supply-chain
    # slip). Exact resolution is still frozen in uv.lock.
    # Core LLM providers
    "anthropic>=0.40.0,<1",
    "openai>=1.50.0,<3",
    "google-genai>=1.0.0,<3",
    # Runtime essentials
    "pydantic>=2.13.4,<3",
    "python-dotenv>=1.0.0,<2",
    "pyyaml>=6.0.0,<7",
]

[project.scripts]
pori = "pori.cli:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["pori*"]
exclude = ["dev_docs*", "tests*", "examples*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pori = ["prompts/**/*.md"]

[project.entry-points."pori.tools"]
"standard" = "pori.tools.standard:register_all_tools"

[project.entry-points."pori.memory_stores"]
"memory" = "pori.memory:create_in_memory_store"
"sqlite" = "pori.memory:create_sqlite_memory_store"

[project.optional-dependencies]
# Vector embeddings for semantic memory recall. Without this extra, Pori
# falls back to a deterministic hash-based embedding (lower quality but
# zero-dependency).
embeddings = [
    "sentence-transformers>=3.2.1,<6",
]
# Web search tool (Tavily). The `web_search` tool returns a friendly
# "install tavily-python" error if this extra is not installed.
web = [
    "tavily-python>=0.5.0,<1",
]
# Rich interactive CLI: slash-command completion + persistent history (CLI-2).
# Optional — the CLI falls back to plain input() without it.
cli = [
    "prompt_toolkit>=3.0.0,<4",
]
# E2B cloud sandbox backend (true VM isolation for agent commands).
sandbox-e2b = [
    "e2b>=2.0.0,<3",
]
# MCP client — connect external MCP tool servers (kernel MCP integration).
# Gated: importing pori never needs this; the SDK is lazy-imported.
mcp = [
    "mcp>=1.26.0,<2",
]
# Everything above in one shot.
all = [
    "sentence-transformers>=3.2.1,<6",
    "tavily-python>=0.5.0,<1",
    "prompt_toolkit>=3.0.0,<4",
]
test = [
    "pytest>=7.3.1,<10",
    "pytest-asyncio>=0.21.0,<2",
    "pytest-mock>=3.10.0,<4",
    "pytest-cov>=4.1.0,<8",
    "hypothesis>=6.75.0,<7",
    "aiohttp>=3.8.4,<4",
    "black==24.8.0",
    "isort>=5.12.0,<9",
    "mypy>=1.3.0,<3",
    "types-PyYAML>=6.0.0,<7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "memory: tests for memory subsystem",
    "tools: tests for tools subsystem",
    "agent: tests for agent functionality",
    "orchestrator: tests for orchestrator functionality",
    "mcp: tests for the kernel MCP client",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["pori"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
# No-regression floor. Ratchet upward as test coverage grows (e.g. after the
# LLM-provider and CLI test backfill). Current measured total is ~66%.
fail_under = 65
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.mypy]
# The kernel's type gate (CI runs `mypy pori/`). Bodies of untyped functions
# ARE checked; incomplete defs are allowed for now and ratcheted per-module.
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
no_implicit_optional = true

[tool.isort]
profile = "black"
line_length = 88
# Declare the kernel package explicitly so isort treats it as first-party
# regardless of where it is invoked from in the monorepo.
known_first_party = ["pori", "aloy_backend"]
