[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aloy-backend"
version = "0.1"
description = "Hosted service for Pori (multi-tenant runs, metrics, and enterprise features)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # API
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",

  # DB (start with SQLite, swap to Postgres later)
  "sqlmodel>=0.0.16",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "aiosqlite>=0.20",

  # Config & Auth
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
  "python-jose[cryptography]>=3.3",
  "asyncpg>=0.29",
  "httpx>=0.27",

  # Cron schedules (recurring runs)
  "croniter>=2.0,<7",

  # Your engine
  "pori>=1.3.3,<2"
]

[tool.uv.sources]
# Local dev uses the editable path; CI/prod resolves from PyPI via the
# version constraint above.
pori = { path = "../../..", editable = true }

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "black>=26",
  "isort>=5",
]

[project.scripts]
aloy-backend = "aloy_backend.main:run"
aloy-backend-worker = "aloy_backend.worker:run"
aloy-backend-gateway = "aloy_backend.gateway.service:run"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.setuptools.packages.find]
include = ["aloy_backend*"]
