[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aloy-backend"
version = "0.1"
description = "Hosted service for Pori (multi-tenant runs, metrics, and enterprise features)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # API
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",

  # DB (start with SQLite, swap to Postgres later)
  "sqlmodel>=0.0.16",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "aiosqlite>=0.20",

  # Config & Auth
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
  "python-jose[cryptography]>=3.3",
  "asyncpg>=0.29",
  "httpx>=0.27",

  # Cron schedules (recurring runs)
  "croniter>=2.0,<7",

  # Encrypt account-connection tokens at rest (Fernet)
  "cryptography>=42,<46",

  # MCP client SDK (kernel connects the user's/org's MCP servers per run)
  "mcp>=1.26.0,<2",

  # Your engine
  "pori>=1.3.3,<2"
]

[tool.uv.sources]
# Local dev uses the editable path; CI/prod resolves from PyPI via the
# version constraint above.
pori = { path = "../../..", editable = true }

[project.optional-dependencies]
# S3-compatible object storage (STORAGE_BACKEND=s3): AWS S3, R2, MinIO,
# Supabase Storage via its S3 protocol.
s3 = ["boto3>=1.34"]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "black>=26",
  "isort>=5",
  "mypy>=1.8",
  "pytest-cov>=5",
]

[project.scripts]
aloy-backend = "aloy_backend.main:run"
aloy-backend-worker = "aloy_backend.worker:run"
aloy-backend-gateway = "aloy_backend.gateway.service:run"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
# Pin first/third-party explicitly so isort produces the SAME ordering no
# matter the working directory (pre-commit runs from the repo root; the CI
# job runs from this directory — without this, detection flips and they
# fight each other).
known_first_party = ["aloy_backend", "pori"]

[tool.setuptools.packages.find]
include = ["aloy_backend*"]

[tool.setuptools.package-data]
aloy_backend = ["product_skills/**/*.md", "product_skills/**/*.yaml"]

[tool.mypy]
# The backend's type gate (CI runs `mypy aloy_backend/`). Same posture as the
# kernel: untyped bodies are checked; strictness ratchets per-module.
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
no_implicit_optional = true
exclude = "aloy_backend/alembic/"
